<?xml version="1.0"?>
<package format="2">
    <name>draco</name>
    <version>1.3.5</version>
    <description>Draco is a library for compressing and decompressing 3D geometric meshes and point clouds. It is intended to improve the storage and transmission of 3D graphics.</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>Apache 2.0</license>

    <url>https://google.github.io/draco/</url>
    <author>https://github.com/tpet/draco/blob/master/AUTHORS</author>

    <buildtool_depend>cmake</buildtool_depend>

    <exec_depend>catkin</exec_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
